04_03_2025 REPORTES - SCROLL ARREGLADO

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -205,7 +205,7 @@
                     class="filtros"
                     (columnasSeleccionadas)="recibirColumnasSeleccionadas($event)"
                   />
-                  <div class="overflow-auto max-h-[70vh]">
+                  <div class="">
                     <design-page-tabla-datos
                       [listaProductos]="listaProductos"
                       [columnasSeleccionadas]="columnasSeleccionadas"
