04_03_2025 REPORTES DETALLE - Paginado arreglado (Se puede ir directo a la iltima página)

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -312,5 +312,11 @@
   <!-- =================================================================================== -->
   <!-- PAGINACIÓN INVENTARIO -->
   <!-- =================================================================================== -->
-  <mat-paginator [pageSizeOptions]="[100]" aria-label="Select page of users" />
+  <!-- <mat-paginator [pageSizeOptions]="[100]" aria-label="Select page of users" /> -->
+   <mat-paginator
+                [pageSizeOptions]="[100]"
+                showFirstLastButtons
+                aria-label="Select page of periodic elements"
+              >
+              </mat-paginator>
 </div>
