--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -230,12 +230,18 @@
 <design-report-inventario
   [citaSeleccionada]="InventarioSeleccionado"
   [detalleProductos]="listaProductos"
+  [TotalRegistros]="TotalRegistros"
+  [RegistrosFaltantes]="RegistrosFaltantes"
+  [RegistrosNoFaltantes]="RegistrosNoFaltantes"
+  [NuevosRegistros]="NuevosRegistros"
+  [ConteosExactos]="ConteosExactos"
 />
 
 <detalle-carga-inventarios
   [citaSeleccionada]="InventarioSeleccionado"
   [detalleProductos]="listaProductos"
   [cantidadInventarios]="cantidadListaProductos"
+
 />
 
 <dashboard-detalle-reporteinventario />
