05_03_2025 ELIMINACION ICONOS Y EXPORTAR DIRECTAMENTE

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -101,10 +101,10 @@
                   <td mat-cell *matCellDef="let row">
                     <div class="flex justify-end">
                       <span
-                        class="cantidadtotal py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-[#7197cc] text-white rounded-full"
-                      >
-                        {{ row.totalregistros || "-" }}
-                      </span>
+                            class="py-1 text-sm inline-flex items-center gap-x-1  font-medium  text-gray-600 rounded-full"
+                          >
+                          {{ row.totalregistros || "-" }}
+                          </span>
                     </div>
                   </td>
                 </ng-container>
