--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -71,7 +71,6 @@
                           <button
                             class="fecharegistro px-1 py-3 flex gap-2 align-center"
                           >
-                            <mat-icon class="icon-color-date">event</mat-icon>
                             <span
                               class="text-sm text-gray-600 dark:text-neutral-400"
                             >
@@ -118,7 +117,7 @@
                         <td mat-cell *matCellDef="let row">
                           <div class="flex justify-end">
                             <span
-                            class="cantidadtotal py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-[#7197cc] text-white rounded-full"
+                            class="py-1 text-sm inline-flex items-center gap-x-1  font-medium  text-gray-600 rounded-full"
                           >
                           {{ row.totalregistros || "-" }}
                           </span>
@@ -139,9 +138,7 @@
                             class="usuariocreador"
                             class="px-6 py-3 flex gap-2 align-center"
                           >
-                            <mat-icon class="icon-color-usuarioasignado"
-                              >person</mat-icon
-                            >
+
                             <span
                               class="text-sm text-gray-600 dark:text-neutral-400"
                             >
@@ -154,7 +151,7 @@
                       <!-- =================================================================================== -->
                       <!-- Estado -->
                       <!-- =================================================================================== -->
-                      <ng-container matColumnDef="estado">
+                      <!-- <ng-container matColumnDef="estado">
                         <th mat-header-cell *matHeaderCellDef >
                           Estado
                         </th>
@@ -167,7 +164,7 @@
                           <td-estado-3 [estado]="'Anulado'" />
                           }
                         </td>
-                      </ng-container>
+                      </ng-container> -->
 
                       <!-- =================================================================================== -->
                       <!-- Detalle -->
