05_03_2025 cambio de color icono detalle en reportes

--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -171,7 +171,7 @@
                       <!-- =================================================================================== -->
                       <ng-container matColumnDef="opciones">
                         <th mat-header-cell *matHeaderCellDef>
-                          Operaciones
+                          Detalle
                         </th>
                         <td mat-cell *matCellDef="let row">
                           <div class="px-1 py-3">
@@ -182,7 +182,7 @@
                                   row.idcarga
                                 )
                               "
-                              class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
+                              class=" detalle btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
                               type="button"
                               data-bs-toggle="offcanvas"
                               data-bs-target="#disenoreporte"
